--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Some application name here</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/javascripts/lib/underscore.js"></script>
+    <script src="/javascripts/lib/jquery.js"></script>
+    <script src="/javascripts/lib/backbone.js"></script>
+    <script src="/javascripts/client.js"></script>
+    <script src="/javascripts/init.js"></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Some application name here</h1>
   </body>
 </html>
