adding backbone support-ish

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,13 @@
     <script src="/javascripts/lib/handlebars.js"></script>
     <script src="/javascripts/client.js"></script>
     <script src="/javascripts/init.js"></script>
-
   </head>
   <body>
     <h1>Some application name here</h1>
+
+    <script id="facetemplate" type="text/x-handlebars">
+      <a href="/theirface/{{_id}}" class="name">{{expires}}</a>
+    </script>
+
   </body>
 </html>
