adding user text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <h1>Some application name here</h1>
 
     <script id="facetemplate" type="text/x-handlebars">
-      <a href="/theirface/{{_id}}" class="name">{{expires}}</a>
+      <a href="/theirface/{{_id}}" class="name">User: {{_id}}</a>
     </script>
 
   </body>
