--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Some application name here</title>
+    <title>IamAwesome</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <script src="/javascripts/lib/underscore.js"></script>
@@ -12,8 +12,8 @@
     <script src="/javascripts/init.js"></script>
   </head>
   <body>
-    <h1>Some application name here</h1>
-
+    <h1>I am Awesome. R U?</h1>
+    <h2><a href="/addface">Add your face here!</a></h2>
     <script id="facetemplate" type="text/x-handlebars">
       <a href="/theirface/{{_id}}" class="name">User: {{_id}}</a>
     </script>
